# molcraft

./: .gitignore  README.md  TODO.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
examples/: Hartree-Fock in Python.ipynb  Use cases with MolCraft.ipynb
molcraft/: __init__.py  __main__.py  clusters.py  exceptions.py  forcefield.py  molconvert.py  structure.py
molcraft/qchem/: __init__.py
test/mol2-bcc/: met.mol2
test/xyz/: bzn.xyz  eth.xyz  met.xyz
